#87133 fix catalog list view - add to cart button display on mobile

--- a/Snowdog_Components/components/Organisms/product-list-item/_product-list-item.scss
+++ b/Snowdog_Components/components/Organisms/product-list-item/_product-list-item.scss
@@ -296,12 +296,8 @@
     }
 
     &__add-to-action {
-        flex-grow: 1;
-        max-width: 250px;
-
-        @include mq($screen-m) {
-            flex-grow: 0;
-        }
+        flex-grow: $product-list-item__add-to-action-flex-grow;
+        max-width: $product-list-item__add-to-action-max-width;
 
         .button--add-to {
             @include add-to-button($product-list-item__add-to-icon-display);
